infra/k8s/canary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketplace
  labels:
    istio-injection: enabled
